2005-12-27  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/relocate.c (relocate_apex): Improved the scarce
	register version of the system copy routine.  It's now using the
	same form as the fastest version.

	* src/mach-lh7a40x/cmd-reset.c (cmd_reset): Added reset command
	for the lh7a40x targets.  It used the watchdog timer to perform
	the system reset.

	* src/arch-arm/entry/entry.c (setup_c): Added code for clearing
	stacks to a known value.

	* src/mach-lh7952x/exception_vectors.c: The exception handling
	code works.  APEX can use interrupts.

	* src/arch-arm/lib/relocate.c (relocate_apex) :recoded
	relocation test to reduce the number of registers and to update
	the syntax for __asm constraints.  This code was substantially
	modified to reflect some minor optimizations.

	* src/mach-lh7952x/relocate-nand.c (relocate_apex): recoded
	relocation test to reduce the number of registers and to update
	the syntax for __asm constraints.

	* src/mach-lh7a40x/initialize.c (usleep): recoded timer to
	update the syntax for __asm constraints.

	* src/mach-lh7952x/init-kev79524.c (usleep): recoded timer to
	update the syntax for __asm constraints.

	* src/mach-lh7952x/init-lpd79520.c (usleep): recoded timer to
	update the syntax for __asm constraints.

	* src/mach-lh7952x/init-lnode80.c (usleep): recoded timer to
	update the syntax for __asm constraints.

	* src/mach-lh7952x/init-lpd79524.c (usleep): recoded timer to
	update the syntax for __asm constraints.

2005-12-22  Marc Singer  <elf@buici.com>

	* src/lib/pngr.c (open_pngr): Function modified to allow for
	reading from TFTP where we don't know the length of the stream
	a priori.

	* src/net/tftp.c (tftp_seek): Rudimentary seek function
	implemented for the sake of splash decoding.  We needed to be able
	to seek over the CRC (or unused portion of any chunk) in order to
	decode PNG images over the network.

	* src/lib/zlib-heap.c: Makde the zlib heap larger since the