@@ -1,3 +1,13 @@
+2006-01-13  Marc Singer  <elf@buici.com>
+
+	* src/arch-arm/entry/mmu.c (mmu_release): In order to support
+	XScale MMU (and caches) we need to customize the MMU disabling
+	code to cope with a different method of cleaning the data cache.
+	This is done for the sake of faster loading of a JFFS2 filesystem
+	image.  The kernel is stored in a JFFS2 filesystem in flash for
+	compactness.  The faster we can read this data, the better.  Also,
+	reads from flash of ramdisk images benefits from caching.
+  
 2005-12-27  Marc Singer  <elf@buici.com>
 
 	* src/arch-arm/lib/relocate.c (relocate_apex): Improved the scarce
